# literature-classification-agent

./: .env.example  README.md  pyproject.toml
docs/: enhancement-roadmap.md
examples/: batch_keyword_request.json  custom_input.json  general_input.json  natural_language_request.txt  papers.jsonl
literature_classification_agent/: __init__.py  agent.py  batch.py  checkpoint.py  cli.py  config.py  llm.py  loader.py  prompt_builder.py  router.py  schema.py  taxonomy.py
tests/: test_agent.py
